Sugati/src/objects/Room_Type__c.object
<CustomObject>
    <description>A list of room types for each accommodation option.</description>
    <fields>
        <fullName>RT_Field_Name__c</fullName>
        <label>Field Name</label>
        <picklist>
            <picklistValues>
                <fullName>Meal Basis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Occupancy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Room Type</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RT_Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RT_Supplier__c</fullName>
        <label>Supplier</label>
        <referenceTo>Supplier__c</referenceTo>
        <relationshipLabel>Room Types</relationshipLabel>
        <relationshipName>Room_Types</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Room Type</label>
    <nameField>
        <displayFormat>RT-{0000000000}</displayFormat>
        <label>Room Type ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Room Types</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>